# t-canvas

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.ko.md  README.md  vcpkg.json
src/: main.cpp
src/app/: Application.cpp  Application.h
src/canvas/: CanvasDocument.cpp  CanvasDocument.h  CanvasView.cpp  CanvasView.h  Math2D.h  Shape.cpp  Shape.h  Transformer.cpp  Transformer.h
src/platform/: FileDialog.h  MacFileDialog.mm
src/render/: ImGuiLayer.cpp  ImGuiLayer.h  SkiaRenderer.cpp  SkiaRenderer.h
